--- a/birds.css
+++ b/birds.css
@@ -76,9 +76,10 @@
 .progress {
     margin-top: 10px;
     height: 25px;
-    width: 500px;
+    width: 400px;
     margin-left: auto;
     margin-right: auto;
+    font-size: xx-small;
 
 }
 
