--- a/layout-test.css
+++ b/layout-test.css
@@ -49,6 +49,7 @@
 .image-match {
     display: block;
     margin-left: 5px;
+    margin-top: 10px;
     max-height: 450px;
     border: 3px #295f4d;
 }
@@ -77,11 +78,11 @@
 }
 
 .progress {
-    margin-top: 40px;
+    margin-top: 25px;
     height: 50px;
-    width: 850px;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
     font-size: x-small;
 
 }
