--- a/Old/birdsOld.css
+++ b/Old/birdsOld.css
@@ -11,7 +11,6 @@
 
 .audio {
     text-align: center;
-    margin-top: 10px;
 }
 
 .answer-form {
@@ -38,19 +37,17 @@
 
 .submit-button {
     text-align: center;
-    margin-top: 10px;
 }
 
 .answer-form {
     text-align: center;
-    margin-top: 10px;
 }
 
 .image-match {
     display: block;
-    margin-left: 5px;
-    margin-top: 10px;
-    max-height: 450px;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 325px;
     border: 3px #295f4d;
 }
 
@@ -63,7 +60,6 @@
 
 .answer-display {
     text-align: center;
-    margin-top: 10px;
 }
 
 .replay-button {
@@ -78,12 +74,12 @@
 }
 
 .progress {
-    margin-top: 25px;
-    height: 50px;
-    text-align: center;
-    margin-left: 20%;
-    margin-right: 20%;
-    font-size: x-small;
+    margin-top: 10px;
+    height: 25px;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: xx-small;
 
 }
 
