--- a/birds.css
+++ b/birds.css
@@ -11,6 +11,7 @@
 
 .audio {
     text-align: center;
+    margin-top: 10px;
 }
 
 .answer-form {
@@ -37,17 +38,19 @@
 
 .submit-button {
     text-align: center;
+    margin-top: 10px;
 }
 
 .answer-form {
     text-align: center;
+    margin-top: 10px;
 }
 
 .image-match {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-height: 325px;
+    margin-left: 5px;
+    margin-top: 10px;
+    max-height: 450px;
     border: 3px #295f4d;
 }
 
@@ -60,6 +63,7 @@
 
 .answer-display {
     text-align: center;
+    margin-top: 25px;
 }
 
 .replay-button {
@@ -74,12 +78,12 @@
 }
 
 .progress {
-    margin-top: 10px;
-    height: 25px;
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: xx-small;
+    margin-top: 25px;
+    height: 50px;
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
+    font-size: x-small;
 
 }
 
